--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -46,25 +46,37 @@
                 {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
                         <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
-                        <div class="card-body">{{lesson.content}}</div>
-                    </div>
-                    {% if user.is_authenticated %}
-                        <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#exam">
-                            Start Exam
-                        </button>
-                        <div id="exam" class="collapse">
-                            {% for question in lesson.question_set.all %}
-                                <form id="question_form" action="point to a submit view" method="post">
-                                    <div class="card mt-1">
-                                        <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                        </div>
-                                    </div>
-                                </form>
-                            {% endfor %}
+                        <div class="card-body">{{lesson.content}} <br />
+                            {% if user.is_authenticated %}
+                                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#exam">
+                                    Start Exam
+                                </button>
+                                <div id="exam" class="collapse">
+                                    <form id="question_form" action="point to a submit view" method="post">
+                                        {% for question in lesson.question_set.all %}
+                                                <div class="card mt-1">
+                                                    <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                                                    {% csrf_token %}
+                                                    <div class="form-group">
+                                                        {% for choice in question.choice_set.all %}
+                                                            <div class="form-check mt-1">
+                                                                <label class="form-check-label">
+                                                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                                                           class="form-check-input" id="{{choice.id}}"
+                                                                           value="{{choice.id}}">{{ choice.choice_text }}
+                                                                </label>
+                                                            </div>
+                                                        {% endfor %}
+                                                    </div>
+                                                </div>
+                                        {% endfor %}
+                                        <br />
+                                        <input class="btn btn-success btn-block" type="submit" value="Submit">
+                                    </form>
+                                </div>
+                            {% endif %}
                         </div>
-                    {% endif %}
+                    </div>
                 {% endfor %}
             </div>
             <!-- Task: show questions and choices -->
